# Sample-Fastapi-Redis-Celery

./: README.md  docker-compose.yaml
background_job/: Dockerfile  pyproject.toml  worker.py
publisher/: app.py  pyproject.toml
subscriber/: Dockerfile  app.py  pyproject.toml
