[tool.poetry]
name = "Background Job"
version = "0.1.0"
description = ""
authors = ["Nishant <nishant_shah@external.mckinsey.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.5"
prettyconf = "^2.2.1"
celery = "^5.2.7"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
